Feature ETP-1118: Update core commons libraries.